--- a/lang/wimb-and-block-de_DE.po
+++ b/lang/wimb-and-block-de_DE.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Browser access control via WhatIsMyBrowser\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-10-14 14:41+0000\n"
-"PO-Revision-Date: 2025-10-14 15:47+0000\n"
+"PO-Revision-Date: 2025-10-17 06:05+0000\n"
 "Last-Translator: hupe13\n"
 "Language-Team: Deutsch\n"
 "Language: de_DE\n"
@@ -23,48 +23,37 @@ msgstr ""
 "Der Zugriff zur entfernten Datenbank scheint in Ordnung zu sein, bitte sende "
 "das Formular erneut ab."
 
-#: admin/block-unknown-empty.php:68
-msgid "After that, the blocking can continue."
-msgstr ""
-
 #: admin/display-table.php:28
 msgid "all entries"
 msgstr "alle Einträge"
 
 #: admin/blocking.php:14
-msgid "Block browser versions up to version number"
-msgstr "Blockiere Browser-Versionen bis zur Versionsnummer"
-
-#: admin/block-unknown-empty.php:14
-msgid "Block browser with \"unknown\" in the software string"
-msgstr ""
-
-#: admin/block-unknown-empty.php:15
-msgid "Block browsers with an empty entry in the software field"
-msgstr "Blocke Browser mit einem leeren Eintrag im Feld Software"
-
-#: admin.php:111
-msgid "Block browsers, bots and crawlers"
-msgstr ""
-
-#: admin/main-blocking.php:15
-msgid "Blog browsers, bots and crawlers"
-msgstr ""
+msgid "Block browser versions smaller than"
+msgstr "Blocke Browser-Versionen, die kleiner sind als "
 
 #. Name of the plugin
 msgid "Browser access control via WhatIsMyBrowser"
 msgstr "Browserzugriffskontrolle mittels WhatIsMyBrowser"
 
-#: admin/block-unknown-empty.php:80
-msgid ""
-"Browsers will be blocked, if the \"simple software string\" contains "
-"\"unknown\" or is empty:"
-msgstr ""
-
-#: admin/blocking.php:64
+#: admin/blocking.php:68
 msgid ""
 "Browsers will be blocked, if the browser and/or the system is an old one:"
 msgstr ""
+"Ein Browser wird geblockt, wenn der Browser und/oder das System veraltet "
+"sind:"
+
+#. %1$s is "unknown" and %2$s is "simple software string".
+#: admin/mgt-table.php:92
+#, php-format
+#| msgid ""
+#| "By default, all entries with an empty or %1$s in the %2$s (software) are "
+#| "displayed."
+msgid ""
+"By default, all blocked entries with an empty or %1$s in the %2$s (software) "
+"are displayed."
+msgstr ""
+"Standardmäßig werden alle geblockten Einträge mit einem leeren Feld oder "
+"%1$s in %2$s (software) angezeigt."
 
 #: admin/display-table.php:30
 msgid "Change view"
@@ -75,26 +64,36 @@ msgid ""
 "Detects the browser and checks whether it is up to date. Blocks old versions "
 "and suspicious browsers."
 msgstr ""
+"Erkennt den Browser und überprüft, ob er auf dem neuesten Stand ist. Blockt "
+"alte Versionen und verdächtige Browser."
 
 #: admin/emergency.php:14
 msgid "Emergency - start / stop"
-msgstr ""
+msgstr "Notfall - Start / Stopp"
 
 #: admin.php:52
 msgid "Emergency button"
-msgstr ""
+msgstr "Notschalter"
 
-#: admin/exclude.php:14
+#: admin/display-table.php:25
+msgid "entries from the last 24 hours"
+msgstr "Einträge der letzten 24 Stunden"
+
+#: admin.php:168
+msgid "Exclude these browsers"
+msgstr "Schließe diese Browser aus"
+
+#: admin/exclude.php:14 admin/exclude.php:60
 msgid "Exclude these browsers from checking"
-msgstr ""
+msgstr "Schließe diese Browser von der Überprüfung aus"
 
-#: admin/settings.php:108
-msgid ""
-"Get an API key for a <a href=\"https://developers.whatismybrowser.com/api/\">"
-"Basic Application Plan</a>."
-msgstr ""
+#. %s is a link .
+#: admin/settings.php:111
+#, php-format
+msgid "Get an API key for a %s."
+msgstr "Hol dir einen API-Schlüssel für einen %s."
 
-#: admin.php:102
+#: admin.php:155
 msgid "Help"
 msgstr "Hilfe"
 
@@ -105,37 +104,32 @@ msgstr "Hilfe und Optionen"
 #. URI of the plugin
 #. Author URI of the plugin
 msgid "https://leafext.de/hp/"
-msgstr ""
+msgstr "https://leafext.de/hp/"
 
 #. Author of the plugin
 msgid "hupe13"
-msgstr ""
+msgstr "hupe13"
 
 #: admin/emergency.php:57
 msgid "If something does not work as expected, you can stop it here."
 msgstr ""
+"Wenn irgendwas nicht wie erwartet funktioniert, kannst du es hier stoppen."
 
 #: admin/settings.php:84
 msgid ""
 "If the database is local, it is automatically set to \"yes\". For remote "
 "databases, set it to \"yes\" on exactly one WP instance."
 msgstr ""
+"Wenn die Datenbank lokal ist, wird es automatisch auf „ja“ gesetzt. Ist es "
+"eine entfernte Datenbank, setze es auf genau einer WP-Instanz auf „ja“."
 
 #: admin/emergency.php:39
 msgid "It is working."
-msgstr ""
+msgstr "Es ist in Betrieb."
 
 #: admin/settings.php:16
 msgid "Local WP database or remote database"
-msgstr ""
-
-#: admin/block-unknown-empty.php:41
-msgid "no"
-msgstr "nein"
-
-#: admin/display-table.php:25
-msgid "only entries from last 2 days"
-msgstr ""
+msgstr "Lokale WP-Datenbank oder entfernte Datenbank "
 
 #: admin/settings.php:23
 msgid "Path of log file"
@@ -157,124 +151,122 @@ msgstr "Passwort der entfernten Datenbank"
 msgid "Remote database username"
 msgstr "Benutzername der entfernten Datenbank"
 
-#: admin.php:72 admin/main-blocking.php:37
+#: admin.php:72 admin.php:101
 msgid "Reset"
-msgstr ""
+msgstr "Zurücksetzen"
 
 #: admin/settings.php:22
 msgid "Rotate the table on this site"
-msgstr ""
+msgstr "Rotiere die Tabelle auf dieser Seite"
 
-#: admin/block-unknown-empty.php:67
-msgid ""
-"Set the software column to any string without \"unknown\" and set the column "
-"block to 0!"
-msgstr ""
+#: admin/mgt-table.php:113
+msgid "Search"
+msgstr "Suche"
+
+#: admin/mgt-table.php:72
+msgid "Select to unblock / block"
+msgstr "Zum Entsperren / Sperren auswählen"
 
 #: admin/settings.php:78
 msgid "Setting:"
-msgstr ""
+msgstr "Einstellung:"
 
-#: wimb-and-block.php:55 wimb-and-block.php:63
+#: wimb-and-block.php:74 wimb-and-block.php:82
 msgid "Settings"
-msgstr ""
+msgstr "Einstellungen"
 
-#: admin.php:64 admin.php:107
+#: admin.php:64 admin.php:160
 msgid "Settings WIMB"
-msgstr ""
+msgstr "Einstellungen für WIMB"
 
-#: admin/block-unknown-empty.php:82
+#: admin/exclude.php:61
 msgid ""
 "Sometimes there are false positive, for example if the browser is from "
 "Mastodon. Then you can exclude these."
 msgstr ""
+"Manchmal gibt es falsche Positive, beispielsweise wenn der Browser von "
+"Mastodon stammt. Diese kannst du dann ausschließen."
 
 #: admin/emergency.php:42
 msgid "STOP!"
-msgstr ""
+msgstr "STOPP!"
 
 #: admin/settings.php:46
 msgid ""
 "The latter is recommended if you have multiple WordPress instances on the "
 "same server."
 msgstr ""
+"Letzteres wird empfohlen, wenn du mehrere WordPress-Instanzen auf demselben "
+"Server hast."
 
 #: admin/emergency.php:55
 msgid ""
 "The plugin begins its work if the WIMB API Key is set and if the database is "
 "configured and running."
 msgstr ""
+"Das Plugin beginnt zu arbeiten, wenn der WIMB-API-Schlüssel festgelegt ist "
+"und die Datenbank konfiguriert ist und läuft."
 
 #: admin/blocking.php:59
 msgid ""
 "The user agent string of every browser accessing your website the first time "
 "is send to WhatIsMyBrowser and some data will be stored in the table:"
 msgstr ""
+"Die Benutzeragentenzeichenfolge jedes Browsers, der zum ersten Mal auf deine "
+"Website zugreift, wird an WhatIsMyBrowser gesendet, und einige Daten werden "
+"in der Tabelle gespeichert:"
 
 #: admin.php:50
 msgid "There is an error in your settings."
-msgstr ""
+msgstr "Die Einstellungen enthalten Fehler."
 
-#: admin/display-table.php:79
+#: admin/display-table.php:80
 msgid "There was an error:"
-msgstr ""
+msgstr "Es gab einen Fehler:"
 
-#: admin/main-blocking.php:92
-msgid "unknown and empty"
-msgstr ""
+#: admin/mgt-table.php:132
+msgid "Unblock / block selected entries"
+msgstr "Ausgewählte Einträge entsperren / sperren"
 
-#: admin/block-unknown-empty.php:79
-msgid "Unknown browsers and empty software strings"
-msgstr ""
+#: admin.php:79 admin.php:172
+#| msgid "Versions control"
+msgid "Versions Control"
+msgstr "Versionskontrolle"
 
-#: admin/block-unknown-empty.php:66
-msgid "Use phpmyadmin to change these entries."
-msgstr ""
-
-#: admin/main-blocking.php:88
-msgid "versions control"
-msgstr ""
-
-#: admin.php:15 admin.php:16
+#: admin.php:15 admin.php:16 admin.php:26
 msgid "WIMB and Block"
-msgstr ""
+msgstr "WIMB und Block"
 
 #: admin/settings.php:15
 msgid "WIMB API Key"
-msgstr ""
+msgstr "WIMB-API-Schlüssel"
 
-#: admin.php:80 admin.php:115
+#: admin.php:108 admin.php:164
 msgid "WIMB Table"
-msgstr ""
+msgstr "WIMB Tabelle"
 
-#: admin.php:84
-msgid "WIMB Table Management - in development"
-msgstr ""
+#: admin.php:112 admin.php:176
+msgid "WIMB Table Management"
+msgstr "Verwaltung der WIMB Tabelle"
 
 #: admin/settings.php:17
 msgid "WIMB table name"
-msgstr ""
-
-#: admin.php:26
-msgid "wimb-and-block"
-msgstr ""
-
-#: admin/block-unknown-empty.php:38
-msgid "yes"
-msgstr "ja"
-
-#: admin/block-unknown-empty.php:65
-msgid "You can also stop such blocking as follows:"
-msgstr ""
+msgstr "WIMB Tabellenname"
 
 #. %1$s and %2$s is a link.
-#: admin.php:41 admin/main-blocking.php:22 admin/main-blocking.php:48
+#: admin.php:41 admin.php:86 admin.php:120
 #, php-format
 msgid "You can change this setting on the %1$smain site%2$s."
-msgstr ""
+msgstr "Du kannst diese Einstellungen auf der %1$sHauptseite%2$s ändern."
+
+#: admin/mgt-table.php:89
+msgid "You can search for entries here."
+msgstr "Hier kannst du nach Einträgen suchen."
 
 #: admin/settings.php:44
 msgid ""
 "You need a table in a database. This can be a table in the default WordPress "
 "database (local) or in a remote database."
 msgstr ""
+"Du benötigst eine Tabelle in einer Datenbank. Dies kann eine Tabelle in der "
+"Standard-WordPress-Datenbank (lokal) oder in einer entfernten Datenbank sein."
