--- a/lang/wimb-and-block-de_DE.po
+++ b/lang/wimb-and-block-de_DE.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Browser access control via WhatIsMyBrowser\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-10-14 14:41+0000\n"
-"PO-Revision-Date: 2026-01-11 17:27+0000\n"
+"PO-Revision-Date: 2026-01-12 17:15+0000\n"
 "Last-Translator: hupe13\n"
 "Language-Team: Deutsch\n"
 "Language: de_DE\n"
@@ -324,7 +324,8 @@ msgid "month"
 msgstr "Monat"
 
 #: admin/statistics-table.php:54
-msgid "Monthly statistics  - first access"
+#| msgid "Monthly statistics  - first access"
+msgid "Monthly statistics - first access"
 msgstr "Monatliche Statistik - erstmaliger Zugriff"
 
 #: admin/statistics-table.php:19
